# jvmilia

./: .clang-format  .gitignore  README.md  dune-project  jvmilia  jvmilia.opam
class/: extern-lib  openjdk
class/libx/: java.base.jmod  module-info.java
class/libx/java/lang/: Object.java
class/test/test/: Main.java  StackOrder.java
lib/: attr.ml  basic.ml  debug.ml  dune  instr.ml  java.ml  loader.ml  shared.ml  testclasses.ml  type.ml  verify.ml  vtype.ml
lib/exec/: basic.ml  caml_interface.cpp  caml_interface.h  debug.ml  debug.mli  jni.cpp  jni.h  jvm.h  jvm.ml  native.cpp  native.h  native.ml  shim.ml
lib/jvm/: dune
lib/jvm/libjvm/: Makefile  foo.cpp  libjvm.cpp
lib/native/: caml_interface.cpp  caml_interface.h  jni.cpp  jni.h  jvm.h  native.cpp  native.h
lib/reader/: classfile.ml  classfile.mli  code.ml  constpool.ml  io.ml
lib/verify/: basic.ml  debug.ml  debug.mli  main.ml  main.mli  testclasses.ml
test/: dune  test.java
test/classes/: java  jdk  sun
